--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li>Docker</li>
             <li>Ansible</li>
             <li>Integração Contínua: Maturidade e produtividade no desenvolvimento de software</li>
+            <li>mysql </li>
         </ul>
     </body>
 
