--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li>Vagrant</li>
             <li>Docker criando containers sem dor de cabeça</li>
-            <li>Ansible: infraestrutura </li>
+            <li>Ansible</li>
             <li>Integração Contínua: Maturidade e produtividade no desenvolvimento de software</li>
             <li>mysql </li>
         </ul>
