alterando nome do curso kubernetes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li>Ansible</li>
             <li>Integração Contínua: Maturidade e produtividade no desenvolvimento de software</li>
             <li>mysql </li>
+            <li>kubernets: Introdução a orquestração de containers</li>
         </ul>
     </body>
 
